--- a/css/styles.css
+++ b/css/styles.css
@@ -198,3 +198,21 @@
   line-height: 19px;
   letter-spacing: 0.03em;
 }
+
+/* Интерактивная секция кнопок портфолио */
+
+.button-portfolio {
+  border: none;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 0.03em;
+}
+
+.button-portfolio:hover,
+.button-portfolio:focus {
+  background-color: var(--brand-color);
+  color: #ffffff;
+}
