Делает фон кнопок фильтрации портфолио белым

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@
 
 .button-portfolio {
   border: none;
+  background-color: #ffffff;
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
