--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 :root {
   --brand-color: #2196f3;
+  --brand-color-one: #000000;
+  --brand-coor-two: #ffffff;
   --text-color: #212121;
+  --text-color-two: #757575;
 }
 
 .body {
@@ -35,11 +38,11 @@
 }
 
 .logo-black {
-  color: #000000;
+  color: var(--brand-color-one);
 }
 
 .logo-white {
-  color: #ffffff;
+  color: var(--brand-coor-two);
 }
 
 /* Оформление навигации сайта header*/
@@ -66,7 +69,7 @@
 .header-mail,
 .header-phone {
   text-decoration: none;
-  color: #757575;
+  color: var(--text-color-two);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -158,7 +161,7 @@
 
 /* Секция преимущества */
 .function-text {
-  color: #757575;
+  color: var(--text-color-two);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -190,7 +193,7 @@
 }
 
 .team-function {
-  color: #757575;
+  color: var(--text-color-two);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -223,7 +226,7 @@
 }
 
 .portfolio > h3 {
-  color: #212121;
+  color: var(--text-color);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -233,7 +236,7 @@
 }
 
 .portfolio > p {
-  color: #757575;
+  color: var(--text-color-two);
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
