--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,3 @@
-:root {
-  --brand-color: #2196f3;
-  --brand-color-one: #000000;
-  --brand-coor-two: #ffffff;
-  --text-color: #212121;
-  --text-color-two: #757575;
-}
-
-.body {
-  background-color: #ffffff;
-  color: #212121;
-}
-
 /* Цвета логотипа #2196F3,  #000000 */
 /* Цвет навигации и основного текста #212121 */
 /* Цвет текста телефона и вторичного текста #757575 */
@@ -24,6 +11,20 @@
 /* Цвет интерактивных элементов в цвет логотипа #2196F3  */
 
 /* Шрифты Raleway 700, Roboto 900, 700, 500, 400  */
+
+:root {
+  --brand-color: #2196f3;
+  --brand-color-one: #000000;
+  --brand-coor-two: #ffffff;
+  --text-color: #212121;
+  --text-color-two: #757575;
+}
+
+.body {
+  background-color: #ffffff;
+  color: #212121;
+  font-family: Roboto, sans-serif;
+}
 
 /* Оформление логотипа */
 .logo {
@@ -57,7 +58,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
@@ -71,10 +72,9 @@
   text-decoration: none;
   color: var(--text-color-two);
   font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
@@ -98,7 +98,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
@@ -110,7 +110,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
@@ -134,8 +134,10 @@
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.88;
   letter-spacing: 0.06em;
+
+  cursor: pointer;
 }
 
 .button:hover,
@@ -177,7 +179,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
 }
@@ -188,7 +190,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
@@ -198,7 +200,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
@@ -211,8 +213,10 @@
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.62;
   letter-spacing: 0.03em;
+
+  cursor: pointer;
 }
 
 .button-portfolio:hover,
@@ -231,7 +235,7 @@
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
-  line-height: 36px;
+  line-height: 2;
   letter-spacing: 0.06em;
 }
 
@@ -241,6 +245,6 @@
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 2;
   letter-spacing: 0.03em;
 }
