--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,17 @@
 
 :root {
   --brand-color: #2196f3;
-  --brand-color-one: #000000;
-  --brand-coor-two: #ffffff;
+  --brand-color-black: #000000;
+  --brand-color-white: #ffffff;
+  --background-color-white: #ffffff;
   --text-color: #212121;
   --text-color-two: #757575;
   --button-filter-color: #f5f4fa;
 }
 
-.body {
-  background-color: #ffffff;
-  color: #212121;
+body {
+  background-color: var(--background-color-white);
+  color: var(--text-color);
   font-family: Roboto, sans-serif;
 }
 
@@ -32,19 +33,18 @@
   color: var(--brand-color);
   text-decoration: none;
   font-family: Raleway, sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
 .logo-black {
-  color: var(--brand-color-one);
+  color: var(--brand-color-black);
 }
 
 .logo-white {
-  color: var(--brand-coor-two);
+  color: var(--brand-color-white);
 }
 
 /* Оформление навигации сайта header*/
@@ -55,8 +55,6 @@
 .site-nav-link {
   text-decoration: none;
   color: var(--text-color);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -71,7 +69,6 @@
 .contacts-link {
   text-decoration: none;
   color: var(--text-color-two);
-  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -92,7 +89,6 @@
 .address-link {
   text-decoration: none;
   color: #ffffff;
-  font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -109,8 +105,6 @@
 /* Оформление секции Hero */
 .title-hero {
   color: #ffffff;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -122,8 +116,6 @@
 .button {
   background-color: var(--brand-color);
   color: #ffffff;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -144,8 +136,6 @@
 }
 
 .function-subtitle {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -156,8 +146,6 @@
 /* Секция преимущества */
 .function-text {
   color: var(--text-color-two);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -167,8 +155,6 @@
 /* Секция услуги компании */
 .development-title,
 .team-title {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -178,8 +164,6 @@
 
 /* Секция Наша команда */
 .team-subtitle {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -188,8 +172,6 @@
 
 .team-text {
   color: var(--text-color-two);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -223,8 +205,6 @@
 
 .portfolio-link > h2 {
   color: var(--text-color);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -233,8 +213,6 @@
 
 .portfolio-link > p {
   color: var(--text-color-two);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 2;
