--- a/css/styles.css
+++ b/css/styles.css
@@ -16,18 +16,17 @@
   --brand-color: #2196f3;
   --brand-color-black: #000000;
   --brand-color-white: #ffffff;
-  --background-color-white: #ffffff;
+  --color-white: #ffffff;
   --background-color-section: #2f303a;
   --text-color: #212121;
   --text-color-two: #757575;
-  --color-section-text: #ffffff;
   --color-section-text-two: rgba(255, 255, 255, 0.6);
   --button-filter-color: #f5f4fa;
   --button-filter-color-hover: #188ce8;
 }
 
 body {
-  background-color: var(--background-color-white);
+  background-color: var(--color-white);
   color: var(--text-color);
   font-family: Roboto, sans-serif;
 }
@@ -92,7 +91,7 @@ body {
 
 .address-link {
   text-decoration: none;
-  color: var(--color-section-text);
+  color: var(--color-white);
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -107,7 +106,7 @@ body {
 
 /* Оформление секции Hero */
 .title-hero {
-  color: var(--color-section-text);
+  color: var(--color-white);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -118,7 +117,8 @@ body {
 
 .button {
   background-color: var(--brand-color);
-  color: var(--color-section-text);
+  color: var(--color-white);
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -184,8 +184,7 @@ body {
 .filter-button {
   border: none;
   background-color: var(--button-filter-color);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -197,14 +196,14 @@ body {
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--brand-color);
-  color: var(--color-section-text);
+  color: var(--color-white);
 }
 
 .portfolio-link {
   text-decoration: none;
 }
 
-.portfolio-link > h2 {
+.portfolio-title {
   color: var(--text-color);
   font-weight: 700;
   font-size: 18px;
@@ -212,7 +211,7 @@ body {
   letter-spacing: 0.06em;
 }
 
-.portfolio-link > p {
+.portfolio-text {
   color: var(--text-color-two);
   font-size: 16px;
   line-height: 2;
